# bdl

./: CMakeLists.txt  README.txt  build.sh  build_ut.sh  clean.sh  clean_all.sh
doc/: bdl.EAP
export_c/: CMakeLists.txt  Makefile  cbase_dataset_loader.cpp  cbase_dataset_loader.h
export_c/sample/: Makefile  dataset_append.c  dataset_append_easy.c
export_py/: Makefile  dataset_appenditem.py  dataset_copy.py  dataset_read.py  dataset_read2.py  dataset_read3.py  dataset_read4.py  dataset_read_attrs.py  dataset_write.py  dataset_write2.py  datset_read.py  datset_read2.py  export_py.cpp  export_py.h
export_py_debug/: Makefile  (+3 more)
gperf_test/dataset/: CMakeLists.txt  dataset_read_perf.cpp  standard_read_perf.cpp
gtest/: CMakeLists.txt
gtest/datafile/: datafile_test.cpp
gtest/dataset/: dataset_test.cpp
perf_test/: CMakeLists.txt
perf_test/dataset/: CMakeLists.txt  dataset_read_perf.cpp  dataset_read_perf_rt.cpp  dataset_read_samp.cpp  output_functions.cpp  output_functions.h  output_summary.cpp  output_summary.h  perf_printer.cpp  perf_printer.h  samp_printer.cpp  samp_printer.h  standard_read_perf.cpp  standard_read_perf2.cpp  standard_read_samp.cpp
perf_test/dataset/conf/: dataset_read_perf.html  dataset_read_perf_localfs_cachefd.html  dataset_read_perf_localfs_orignal.html  dataset_read_perf_lustre_ssd_cachefd.html  dataset_read_ran.conf  dataset_read_ran_rt.conf  dataset_read_seq.conf  standard_read_ran.conf  standard_read_seq.conf
perf_test/dataset/perf_conf/: auto_run_hdd.sh
perf_test/dataset/samp_conf/: auto_run.sh  dataset.samp.ran.ssd.sh  dataset.samp.seq.hdd.sh  dataset.samp.seq.ssd.sh  file.list  standard.samp.hdd.sh  standard.samp.ssd.sh
src/: CMakeLists.txt
src/common/: calculate_crc32.cpp  calculate_crc32.h  ceil_to_align_at.h  wrapposix.cpp  wrapposix.h  wrapstdio.cpp  wrapstdio.h
src/common/error/: Makefile
src/common/test/: Makefile  ceil_to_align_at.cpp  test_ceil_to_align_at.sh
src/common/test/error/: Makefile
src/common/test/wrapposix/: Makefile  hole.cpp  mywrite.cpp
src/common/test/wrapstdio/: Makefile  hello  hole.cpp  mycat.cpp  mywrite.cpp  seek.cpp
src/common/wrapposix/: Makefile  README.txt  mycat.cpp  seek.cpp
src/datafile/: datafile_config.h  datafile_header.h  datafile_metadata.h  datafile_serializer.cpp  datafile_view.cpp  datafile_view.h
src/datafile/test/: Makefile  datafile_header_size.cpp
src/dataset/: dataset_config.cpp  dataset_config.h  dataset_direct_reader.cpp  dataset_direct_reader.h  dataset_file_read_handle.cpp  dataset_file_read_handle.h  dataset_index.cpp  dataset_index.h  dataset_index_item.cpp  dataset_index_item.h  dataset_indexfile_reader.cpp  dataset_indexfile_reader.h  dataset_indexfile_writer.cpp  dataset_indexfile_writer.h  dataset_partition_reader.h  dataset_reader.cpp  dataset_reader.h  dataset_util.cpp  dataset_util.h  dataset_writer.cpp  dataset_writer.h  i_partition_pos_reader_factory.cpp  i_partition_pos_reader_factory.h  io_context.cpp  partition_pos_reader_factory.cpp  partition_pos_reader_factory.h  partition_pos_reader_pool.cpp  partition_pos_reader_pool.h
src/index/: index_item.cpp  index_item.h  indexfile_reader.cpp  indexfile_reader.h  indexfile_writer.cpp  indexfile_writer.h
src/indexfile/: indexfile_item.cpp  indexfile_item.h  indexfile_reader.cpp  indexfile_reader.h  indexfile_writer.cpp  indexfile_writer.h
src/io/: file_line_reader.cpp  file_line_reader.h  file_line_writer.cpp  file_line_writer.h  i_file_reader.cpp  i_file_reader.h  i_file_system.cpp  i_file_system.h  i_file_writer.cpp  i_file_writer.h  i_line_reader.cpp  i_line_reader.h  i_line_writer.cpp  i_line_writer.h  io_config.h  io_context.cpp  io_context.h  posix_file_reader.cpp  posix_file_reader.h  posix_file_system.cpp  posix_file_system.h  posix_file_system_rbuf.cpp  posix_file_system_rbuf.h  posix_file_writer.cpp  posix_file_writer.h  stdc_file_reader.cpp  stdc_file_reader.h
src/io_context/: dataset_config.h  dataset_index.cpp  dataset_index.h  dataset_util.cpp  dataset_util.h  dataset_writer.cpp  dataset_writer.h  io_context.cpp  io_context.h
src/partition/: datafile_index.h  partition_config.h  partition_full_error.cpp  partition_full_error.h  partition_pos_reader.cpp  partition_pos_reader.h  partition_reader.cpp  partition_reader.h  partition_writer.cpp  partition_writer.h
src/partition/test/: data_file_header_size.cpp
src/proto/: README.txt  metadata.pb.cc  metadata.pb.h  metadata.proto
src/section/: section_memory_cache.cpp  section_memory_cache.h
src/storage/: datafile_metadata.cpp  datafile_metadata.h  datafile_serializer.cpp  datafile_serializer.h  datafile_view.cpp  partition_config.h  partition_writer.h  section_config.h  section_header.h  section_memory_cache.cpp  section_memory_cache.h
src/storage/test/: Makefile
test/: CMakeLists.txt
test/datafile/: CMakeLists.txt  print_datafile.h  read_datafile.cpp  test_metadata.cpp
test/dataset/: CMakeLists.txt  dataset_append_item.cpp  dataset_indexfile_read.cpp  dataset_read.cpp  dataset_read2.cpp  dataset_write.cpp  print_dataset_index_item.h  write_file.h
test/index/: CMakeLists.txt  print_index_item.h  test_index_item.cpp  test_indexfile_read.cpp  test_indexfile_write.cpp
test/indexfile/: CMakeLists.txt  print_indexfile_item.h  test_indexfile_item.cpp  test_indexfile_read.cpp  test_indexfile_write.cpp
test/io/: CMakeLists.txt  getline.cpp  hole.cpp  myappend.cpp  mycp.cpp  mycp2.cpp  myread.cpp  mywrite.cpp  seek.cpp
test/io_context/: CMakeLists.txt  dataset_read.cpp  dataset_write.cpp
test/main/: CMakeLists.txt  main.cpp
test/partition/: CMakeLists.txt  config_parser.cpp  partition_append.cpp  partition_pos_read.cpp  partition_read.cpp  partition_write.cpp  test_partition_util.cpp  test_partition_util.h
test/section/: CMakeLists.txt  create_datafile.h  print_section.h  test_section_read.cpp
test/storage/: CMakeLists.txt  create_datafile.cpp  create_datafile.h  print_datafile.cpp  print_metadata.cpp  print_metadata.h  print_section.cpp  test_datafile.cpp  test_metadata.cpp  test_section_write.cpp  write_datafile.cpp
(+1607 files in other folders)
